Bug #58109
ceph-fuse: doesn't work properly when the version of libfuse is 3.1 or later
Status:
Pending Backport
Priority:
Normal
Assignee:
Category:
Administration/Usability
Target version:
% Done:
0%
Source:
Tags:
backport_processed
Backport:
pacific,quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
ceph-fuse
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
I want to use ceph-fuse with libfuse which version is 3.6 or later, because it supports for fuse kernel feature `max_pages` which allows to increase the maximum number of pages that can be used per request and this can improve performance. But it doesn't work properly, the fuse worker thread keeps recreating and deleting file or directory will be blocked forever.
Related issues
History
#1 Updated by Venky Shankar about 2 months ago
- Category set to Administration/Usability
- Status changed from New to Triaged
- Assignee set to Zhansong Gao
- Backport set to pacific,quincy
#2 Updated by Venky Shankar about 1 month ago
- Status changed from Triaged to Pending Backport
#3 Updated by Backport Bot about 1 month ago
- Copied to Backport #58341: pacific: ceph-fuse: doesn't work properly when the version of libfuse is 3.1 or later added
#4 Updated by Backport Bot about 1 month ago
- Copied to Backport #58342: quincy: ceph-fuse: doesn't work properly when the version of libfuse is 3.1 or later added
#5 Updated by Backport Bot about 1 month ago
- Tags set to backport_processed